force-app/main/default/objects/HP_EC_Justificatif_De_Domicile_Setting__mdt/HP_EC_Justificatif_De_Domicile_Setting__mdt.object-meta.xml
<CustomObject>
    <label>HP EC Justificatif De Domicile Setting</label>
    <pluralLabel>HP EC Justificatif De Domicile Settings</pluralLabel>
</CustomObject>