force-app/main/default/objects/HP_EC_Justificatif_De_Domicile_Setting__mdt/fields/adr_gdfsuez_siege__c.field-meta.xml
<CustomField>
    <fullName>adr_gdfsuez_siege__c</fullName>
    <label>adr_gdfsuez_siege</label>
    <length>255</length>
    <type>Text</type>
</CustomField>