force-app/main/default/objects/HP_EC_Justificatif_De_Domicile_Setting__mdt/fields/capital_GDF_SUEZ__c.field-meta.xml
<CustomField>
    <fullName>capital_GDF_SUEZ__c</fullName>
    <label>capital_GDF_SUEZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>