force-app/main/default/objects/HP_EC_Justificatif_De_Domicile_Setting__mdt/fields/depannage_electricite__c.field-meta.xml
<CustomField>
    <fullName>depannage_electricite__c</fullName>
    <label>depannage_electricite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>