force-app/main/default/objects/HP_EC_Justificatif_De_Domicile_Setting__mdt/fields/numero_tva_gdf_suez__c.field-meta.xml
<CustomField>
    <fullName>numero_tva_gdf_suez__c</fullName>
    <label>numero_tva_gdf_suez</label>
    <length>255</length>
    <type>Text</type>
</CustomField>