force-app/main/default/objects/HP_EC_Justificatif_De_Domicile_Setting__mdt/fields/service_client_agilab__c.field-meta.xml
<CustomField>
    <fullName>service_client_agilab__c</fullName>
    <label>service_client_agilab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>